# politiwiki

./: .env  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  fly.toml  package-lock.json
migration/: Cargo.toml
migration/src/: lib.rs  m20250125_083500_create_roles_table.rs  m20250125_085421_create_images_table.rs  m20250125_085443_create_users_table.rs  m20250125_085500_create_contents_table.rs  m20250125_093836_create_pages_table.rs  m20250420_204700_create_categories_table.rs  m20250428_133436_seed_admin_user.rs
src/: lib.rs  main.rs
src/database/: categories.rs  content.rs  images.rs  mod.rs  pages.rs  prelude.rs  roles.rs  sea_orm_active_enums.rs  users.rs
src/routes/: content_get.rs  mod.rs
src/routes/admin/: approve_content.rs  mod.rs
src/routes/admin/category/: create_category.rs  delete_category.rs  get_category.rs  mod.rs
src/routes/content/: create_content.rs  delete_content.rs  get_content.rs  mod.rs  update_content.rs  update_page.rs
src/routes/custom_middleware/: authguard.rs
src/routes/image/: create_image.rs  get_image.rs  mod.rs  partial_update_image.rs  update_image.rs
src/routes/page/: create_page.rs  get_page.rs  mod.rs  partial_update_page.rs  update_page.rs
src/routes/role/: get_role.rs  mod.rs
src/routes/user/: create_user.rs  mod.rs  user.rs  user_create.rs
src/tests/: init_db.rs  mod.rs  tests.rs
src/utils/: jwt.rs  mod.rs  role.rs
