[package]
name = "politiwiki"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.13.0"
axum = { version = "0.5.17", features = ["headers"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
sea-orm = { version = "1.1.4", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
sea-orm-migration = "1.1.4"
serde = {version = "1.0.147", features = ["derive"]}
tokio = { version = "1.21.2", features = ["full", "macros", "rt-multi-thread"] }
chrono = "0.4"
argon2 = "0.5.3"
tower-http = { version = "0.3.4", features = ["cors"] }


