[package]
name = "politiwiki"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.13.0"
axum = { version = "0.5.17", features = ["headers","macros","multipart"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
sea-orm = { version = "1.1.4", features = ["runtime-tokio-native-tls", "runtime-tokio-rustls", "sqlx-postgres", "sqlx-sqlite"] }
sea-orm-migration = "1.1.4"
serde = {version = "1.0.147", features = ["derive"]}
tokio = { version = "1.21.2", features = ["full", "macros", "rt-multi-thread"] }
chrono = "0.4"
argon2 = "0.5.3"
tower-http = { version = "0.3.4", features = ["cors","trace"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"]}
tracing = "0.1.41"
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"
json = "0.12.4"
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["sqlite", "runtime-tokio-native-tls"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tower = { version = "0.4", features = ["util"] }
hyper = "0.14"
serde_json = "1.0"
tokio-test = "0.4.4"


